--- a/lang/main.json
+++ b/lang/main.json
@@ -264,10 +264,10 @@
         "Share": "Share",
         "Submit": "Submit",
         "Understand": "I understand",
-        "WaitForHostMsg": "The conference has not yet started because no moderators have yet arrived. If you'd like to become a moderator please log-in. Otherwise, please wait.",
+        "WaitForHostMsg": "Your dietician is on the way and will be online soon 🧑‍💻",
         "WaitForHostNoAuthMsg": "The conference has not yet started because no moderators have yet arrived. Please wait.",
         "WaitingForHostButton": "Wait for moderator",
-        "WaitingForHostTitle": "Waiting for a moderator…",
+        "WaitingForHostTitle": "👋 Please wait…",
         "Yes": "Yes",
         "accessibilityLabel": {
             "Cancel": "Cancel (leave dialog)",
